--- a/5winsights.html
+++ b/5winsights.html
@@ -102,29 +102,73 @@
         </header>
 
 
-        <main class="uk-background-muted">
-            <!-- Main Content -->
-            <div class="uk-container uk-container-large uk-section uk-hidde">
-                <div class="uk-grid uk-flex uk-flex-top" uk-grid>
-                    <div class="uk-margin-auto uk-text-center@s" uk-scrollspy="target:div;delay:75;repeat: true;cls:uk-animation-slide-bottom-small">
-                        <div>
-                            <h1 class="fw-600 uk-margin-left uk-margin-right">Applying new brand standards</h1>
-                        </div>
-                        <div>
-                            <h2 class="fs-17 fw-500 in uk-margin-left uk-margin-right">Updating designs for large-scale booth backdrops, marketing collateral and branded swag to align with 5W's new identity</h2>
-                        </div>
-                    </div>
-
-                    <div class="uk-width-1-3 uk-width-1-5@s uk-width-1-5@m uk-hidden">
-                        <div class="uk-margin">
-                            <img src="img/headshot.jpg" alt="" class="uk-border-circle uk-box-shadow-large " />
-                        </div>
+        <main class="">
+            <div>
+                <div class="uk-container uk-container-expand uk-padding-remove uk-overflow-hidden uk-height-max-large">
+                    <div class="uk-background-top-center uk-background-cover uk-panel uk-flex uk-flex-top uk-flex-center " style="background-image: url(img/5winsights/conference-backdrop-mockup.webp);" uk-height-viewport="offset-top: true; offset-bottom: 50;min:300">
                     </div>
                 </div>
             </div>
 
+            <!-- Main Content -->
+            <div class="uk-section uk-section-small">
+                <div class="uk-container uk-container-small">
+                    <div class="uk-margin-left uk-margin-right">
+                        <div class="uk-margin-auto uk-text-center@s" uk-scrollspy="target:div;delay:75;repeat: true;cls:uk-animation-slide-bottom-small">
+                            <div>
+                                <h1 class="fw-600">Implementing a new brand identity</h1>
+                            </div>
+                            <div>
+                                <h2 class="fw-500 uk-margin-large-bottom fs-18">A complete rollout across tradeshow, marketing, and promotional materials to ensure a unified brand experience.</h2>
+                            </div>
+                        </div>
 
-            <div class="uk-section" uk-height-viewport="expand:true">
+
+                        <ul class="uk-list uk-list-large uk-list-divider" uk-accordion>
+                            <li class="uk-open">
+                                <a class="uk-accordion-title" href><h3 class="uk-margin-remove fs-18 fw-600">The Challenge</h3></a>
+                                <div class="uk-accordion-content">
+                                    <p>Following a company-wide brand refresh, a wide range of existing tradeshow and marketing materials were no longer aligned with the new visual identity and strategic messaging. This created a fragmented brand experience and diluted the impact of the new identity in the market.</p>
+                                </div>
+                            </li>
+
+                            <li>
+                                <a class="uk-accordion-title" href><h3 class="uk-margin-remove fs-18 fw-600">My Role</h3></a>
+                                <div class="uk-accordion-content">
+                                    <p>As the lead designer on this initiative, I was tasked with auditing all existing collateral and spearheading the effort to update every touchpoint to be consistent with the new brand standards.</p>
+                                </div>
+                            </li>
+
+                            <li>
+                                <a class="uk-accordion-title" href><h3 class="uk-margin-remove fs-18 fw-600">The Process</h3></a>
+                                <div class="uk-accordion-content">
+                                    <p>My process began with a deep dive into the new branding guidelines and a comprehensive audit of all existing materials. I owned the responsibility of reviewing existing collateral, identifying necessary updates and polish to align with new brand standards and executing the changes.</p>
+
+                                    <p>This involved:</p>
+
+                                    <ul class="uk-list uk-list-bullet">
+                                        <li><span class="fw-500">Analysis:</span> Carefully evaluating each piece, from a large-scale tradeshow backdrop to one-pagers and digital ads, to determine what could be updated versus what needed to be redesigned from the ground up.</li>
+
+                                        <li><span class="fw-500">Execution:</span> I then moved into hands-on design, where I "created original graphic assets and visual elements, integrating them into the robust and scalable design templates and systems I built to empower teams and ensure brand cohesion." This ensured that every piece of collateral was not only visually updated but also built for future consistency and ease of use.</li>
+
+                                        <li><span class="fw-500">Collaboration:</span>  Throughout the project, I "collaborated on internal branding and rebranding efforts" with key marketing and leadership stakeholders to ensure the final output was perfectly aligned with the new strategic direction.</li>
+
+                                    </ul>
+                                </div>
+                            </li>
+
+                            <li>
+                                <a class="uk-accordion-title" href><h3 class="uk-margin-remove fs-18 fw-600">The Outcome</h3></a>
+                                <div class="uk-accordion-content">
+                                    <p>The result was a cohesive suite of marketing and tradeshow materials that presented a strong, unified brand identity across all customer-facing touchpoints. The updated collateral successfully launched the new identity into the market and provided the team with scalable templates to maintain consistency moving forward.</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="uk-section uk-background-muted" uk-height-viewport="expand:true">
 
                 <div class="uk-container uk-container-large">
 
@@ -133,25 +177,7 @@
                         <hr />
                     </div>
 
-                    <div class="uk-background-default uk-border-rounded-large uk-padding-large uk-margin">
-                        <div id="5w-insights" uk-grid>
-                            <div class="uk-width-expand uk-flex uk-flex-middle uk-flex-first@s">
-                                <div>
-                                    <img src="img/5winsights/5W_logo.png" class="uk-width-small uk-width-1-2 uk-width-1-3@s uk-width-1-5@m" />
 
-                                    <div class="uk-margin-top"><p class="fs-40 fw-600">Updating 5W Insights' conference presence</p></div>
-
-                                    <div><p>The 5W Insights tradeshow and marketing collateral received a visual and strategic messaging update for the 2024 Bridge Conference.</p></div>
-
-                                </div>
-                            </div>
-                            <div class="uk-width-2-5@s uk-width-1-2@l uk-flex uk-flex-middle uk-flex-center uk-flex-first">
-                                <div class="uk-overflow-hidden">
-                                    <img src="img/5winsights/Booth-Setup_2024.webp" class="uk-height-max-medium" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
                     <div class="uk-background-muted uk-border-rounded-large uk-padding uk-margin">
 
@@ -160,7 +186,7 @@
                                 <div class="">
                                     <h4 class="fs-20 fw-600 uk-margin-small-bottom">Tradeshow backdrop
                                     </h4>
-                                    <p class="fs-14 uk-margin-small-top">5W's bold new colors and visuals were applied in this new backdrop treatment while the core company message was simplified to increase engagement.</p>
+                                    <p class="fs-14 uk-margin-small-top">The strategy for this backdrop was to capture attention on a busy tradeshow floor. I implemented 5W's bold new visual identity for immediate impact and streamlined the core message to be instantly digestible, boosting audience engagement.</p>
 
                                     <div class="uk-flex-center uk-flex">
                                         <div class="uk-display-inline-block uk-background-muted uk-border-pill uk-flex-center uk-flex-middle uk-grid-small uk-box-shadow-inset">
@@ -193,11 +219,11 @@
                         <div class="uk-width-1-3@m">
                             <div class="uk-background-muted uk-padding uk-border-rounded-large"  >
 
-                                <div class="uk-grid" uk-grid>
+                                <div class="uk-grid-small" uk-grid>
                                     <div class="uk-width-expand@s uk-flex uk-flex-middle">
                                         <div>
                                             <h4 class="fs-20 fw-600 uk-margin-small-bottom">Floor Sign</h4>
-                                            <p class="fs-14 uk-margin-small-top">5W's tall floor sign was repurposed from providing additional information in the booth space to becoming a replacement for the backdrop for booth spaces without room for the larger backdrop.</p>
+                                            <p class="fs-14 uk-margin-small-top">I developed a versatile and modular event system by redesigning this tall floor sign. Originally an informational piece, it now functions as a primary backdrop in smaller spaces, ensuring a professional and consistent brand identity at any event.</p>
 
                                             <div class="uk-flex-center uk-flex">
 
@@ -229,7 +255,7 @@
                                     <div class="uk-width-expand@m uk-flex uk-flex-middle">
                                         <div>
                                             <h4 class="fs-20 fw-600 uk-margin-small-bottom">Podium</h4>
-                                            <p class="fs-14 uk-margin-small-top">The podium wrap was given a bolder presence and visual interest with a new background color and new visuals.</p>
+                                            <p class="fs-14 uk-margin-small-top">I updated this podium wrap with a bolder color palette and new visuals to command attention and create a cohesive, professional on-stage brand presence.</p>
 
                                             <div class="uk-flex-center uk-flex">
                                                 <div class="uk-display-inline-block uk-background-muted uk-border-pill uk-flex-center uk-flex-middle uk-grid-small uk-box-shadow-inset">
@@ -261,14 +287,14 @@
                 </div>
             </div>
 
-            <div class="uk-section" uk-height-viewport="expand:true">
+            <div class="uk-section uk-background-muted" uk-height-viewport="expand:true">
                 <div class="uk-container uk-container-large">     
                     <div class="uk-text-left">
                         <h2 class="fs-18 fw-500 uk-text-uppercase">// LinkedIn</h2>
                         <hr />
                     </div>
 
-                    <div class="uk-background-default uk-padding-small uk-border-rounded-large uk-margin-bottom">
+                    <div class="uk-background-muted uk-padding-small uk-border-rounded-large uk-margin-bottom">
 
                         <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite:true">
                             <div class="uk-slider-items">
@@ -306,18 +332,19 @@
                             </div>
                         </div>
 
-                        <h4 class="fs-20 fw-600 uk-margin-small-bottom uk-margin-top">Carousel slider</h4>
-                        <p class="fs-14 uk-margin-small-top">Five slides created for a LinkedIn carousel post.</p>
-
+                        <div class="uk-width-4-5@l">
+                            <h4 class="fs-20 fw-600 uk-margin-small-bottom uk-margin-top">Carousel slider</h4>
+                            <p class="fs-14 uk-margin-small-top">I designed this LinkedIn carousel as a key asset for a pre-conference marketing campaign to drive booth attendance. The five-slide sequence strategically outlines a range of incentives, from free AI donor insights and proven results to exclusive discounts, all designed to capture interest and convert online engagement into in-person booth visits.</p>
+                        </div>
                     </div>
 
                     <div class="uk-width-2-3@s uk-width-1-2@m">
-                        <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="li-post">
+                        <div class="uk-background-muted  uk-padding-small uk-border-rounded-large" id="li-post">
                             <div>
                                 <img src="img/5winsights/li/5W_VFRI-speaker_LinkedIn.webp" />
                             </div>
                             <h4 class="fs-20 fw-600 uk-margin-small-bottom uk-margin-top">Post graphic</h4>
-                        <p class="fs-14 uk-margin-small-top">A supporting graphic created for a LinkedIn Post to promote 5W's CEO as a Session Speaker.</p>
+                            <p class="fs-14 uk-margin-small-top">This promotional graphic was designed to announce a speaking session by 5W's CEO at a major industry conference. The key challenge was to create a co-branded visual that harmoniously featured both the 5W Insights and the conference logos. I leveraged elements from 5W's recent brand refresh to create a dynamic layout, establishing a clear visual hierarchy that drove attention to the session details while maintaining brand consistency for both entities.</p>
                         </div>
                     </div>
                 </div>
