--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
                         <hr />
                     </div>
 
-                    <div class="uk-background-primary uk-border-rounded-large uk-padding-large uk-light">
+                    <div class="uk-background-default uk-border-rounded-large uk-padding-large">
                         <div id="mack-survey" uk-grid uk-scrollspy="target:div;delay:75;repeat: true;">
                             <div class="uk-width-expand uk-flex uk-flex-middle uk-flex-first@s">
                                 <div>
                                     <div uk-scrollspy-class="uk-animation-slide-bottom-small">
-                                        <img src="img/mack/macktrucks-logo.png" class="uk-width-small uk-width-1-2 uk-width-1-4@s uk-width-1-5@m" />
+                                        <img src="img/mack.webp" class="uk-width-small uk-width-1-2 uk-width-1-4@s uk-width-1-5@m" />
                                     </div>
 
                                     <div class="uk-margin-top" uk-scrollspy-class="uk-animation-slide-bottom-small">
@@ -170,12 +170,11 @@
                                     </div>
 
                                     <div class="uk-margin-top" uk-scrollspy-class="uk-animation-slide-bottom-small ">
-                                        <p class="fs-40 fw-600">Applying new brand standards 
-                                        </p>
+                                        <p class="fs-40 fw-600">Implementing a new brand identity</p>
                                     </div>
 
                                     <div uk-scrollspy-class="uk-animation-slide-bottom-small">
-                                        <p class="in fs-16 fw-500">Updating 5W Insights' conference presence with refreshed booth and marketing collateral in alignment with a recent brand update.</p>
+                                        <p class="in fs-16 fw-500">A complete rollout across tradeshow, marketing, and promotional materials to ensure a unified brand experience.</p>
                                     </div>
 
                                     <div uk-scrollspy-class="uk-animation-slide-bottom-small">
