--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                 <div class="uk-grid uk-flex uk-flex-top uk-margin-large-top" uk-grid>
                     <div class="uk-margin-auto uk-text-center@s" >
                         <div uk-scrollspy-class="uk-animation-slide-bottom-small uk-animation-fade">
-                            <h1 class="fw-600 uk-margin-left uk-margin-right">Senior marketing designer focused on craft, growth and strategy</h1>
+                            <h1 class="fw-600 uk-margin-left uk-margin-right">Solving complex challenges. Delivering measurable results</h1>
                         </div>
-                        <div class="uk-margin-auto" uk-scrollspy-class="uk-animation-slide-bottom-small uk-animation-fade">
-                            <h2 class="fs-17 fw-500 in uk-margin-left uk-margin-right">I solve complex challenges and deliver measurable business results through hands-on skill and strategic thinking</h2>
+                        <div class="uk-width-3-5@m uk-margin-medium-top uk-margin-auto" uk-scrollspy-class="uk-animation-slide-bottom-small uk-animation-fade">
+                            <h2 class="fs-17 fw-500 in uk-margin-left uk-margin-right">I'm a senior designer applying hands-on skill and strategic thinking at the intersection of brand, growth, and performance marketing.</h2>
                         </div>
                     </div>
                 </div>
