--- a/5winsights.html
+++ b/5winsights.html
@@ -142,17 +142,16 @@
                             <li>
                                 <a class="uk-accordion-title" href><h3 class="uk-margin-remove fs-18 fw-600">The Process</h3></a>
                                 <div class="uk-accordion-content">
-                                    <p>My process began with a deep dive into the new branding guidelines and a comprehensive audit of all existing materials. I owned the responsibility of reviewing existing collateral, identifying necessary updates and polish to align with new brand standards and executing the changes.</p>
+                                    <p>My process began with a comprehensive audit of all existing materials. I owned the responsibility of reviewing existing collateral, identifying necessary updates and polish to align with new brand standards and executing the changes.</p>
 
                                     <p>This involved:</p>
 
-                                    <ul class="uk-list uk-list-bullet">
-                                        <li><span class="fw-500">Analysis:</span> Carefully evaluating each piece, from a large-scale tradeshow backdrop to one-pagers and digital ads, to determine what could be updated versus what needed to be redesigned from the ground up.</li>
+                                    <ul class="uk-list uk-list-bullet uk-list-large">
+                                        <li><span class="fw-600">Analysis:</span> Carefully evaluating each piece, from a large-scale tradeshow backdrop to case studies, brochures and digital ads, to determine what could be updated versus what needed to be redesigned from the ground up.</li>
 
-                                        <li><span class="fw-500">Execution:</span> I then moved into hands-on design, where I "created original graphic assets and visual elements, integrating them into the robust and scalable design templates and systems I built to empower teams and ensure brand cohesion." This ensured that every piece of collateral was not only visually updated but also built for future consistency and ease of use.</li>
+                                        <li><span class="fw-600">Execution:</span> I then moved into hands-on design, where I created original graphic assets and visual elements, integrating them into the robust and scalable design system I built to ensure brand cohesion. This ensured that every piece of collateral was not only visually updated but also built for future consistency and ease of use.</li>
 
-                                        <li><span class="fw-500">Collaboration:</span>  Throughout the project, I "collaborated on internal branding and rebranding efforts" with key marketing and leadership stakeholders to ensure the final output was perfectly aligned with the new strategic direction.</li>
-
+                                        <li><span class="fw-600">Collaboration:</span>  Throughout the project, I collaborated on internal branding and rebranding efforts with key marketing and leadership stakeholders to ensure the final output was perfectly aligned with the new strategic direction.</li>
                                     </ul>
                                 </div>
                             </li>
@@ -334,7 +333,7 @@
 
                         <div class="uk-width-4-5@l">
                             <h4 class="fs-20 fw-600 uk-margin-small-bottom uk-margin-top">Carousel slider</h4>
-                            <p class="fs-14 uk-margin-small-top">I designed this LinkedIn carousel as a key asset for a pre-conference marketing campaign to drive booth attendance. The five-slide sequence strategically outlines a range of incentives, from free AI donor insights and proven results to exclusive discounts, all designed to capture interest and convert online engagement into in-person booth visits.</p>
+                            <p class="fs-14 uk-margin-small-top">I designed this LinkedIn carousel as a key asset for a pre-conference marketing campaign to drive booth attendance. The five-slide sequence strategically outlines a range of incentives, from free AI donor insights and case studies on proven results to exclusive discounts, all designed to capture interest and convert online engagement into in-person booth visits.</p>
                         </div>
                     </div>
 
@@ -344,7 +343,7 @@
                                 <img src="img/5winsights/li/5W_VFRI-speaker_LinkedIn.webp" />
                             </div>
                             <h4 class="fs-20 fw-600 uk-margin-small-bottom uk-margin-top">Post graphic</h4>
-                            <p class="fs-14 uk-margin-small-top">This promotional graphic was designed to announce a speaking session by 5W's CEO at a major industry conference. The key challenge was to create a co-branded visual that harmoniously featured both the 5W Insights and the conference logos. I leveraged elements from 5W's recent brand refresh to create a dynamic layout, establishing a clear visual hierarchy that drove attention to the session details while maintaining brand consistency for both entities.</p>
+                            <p class="fs-14 uk-margin-small-top">I designed promotional graphic to announce a speaking session by 5W's CEO at a major industry conference. The key challenge was creating a co-branded visual that harmoniously featured both the 5W Insights and the conference logo. I leveraged elements from 5W's recent brand refresh to create a dynamic layout, establishing a clear visual hierarchy that drove attention to the session details while maintaining brand consistency for both entities.</p>
                         </div>
                     </div>
                 </div>
