--- a/mack.html
+++ b/mack.html
@@ -31,9 +31,9 @@
         <!-- End Google Tag Manager (noscript) -->
 
         <header>
-            <div class="uk-background-muted ">
+            <div class="uk-background-muted">
                 <div uk-sticky="show-on-up: true">
-                    <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small" uk-dropnav="align:center">
+                    <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small uk-padding-xsmall uk-padding-remove-vertical" uk-dropnav="align:center">
                         <div class="uk-container uk-container-xlarge" uk-navbar>
                             <!-- mobile nav -->
                             <div class="uk-navbar-item uk-navbar-left uk-hidden@m uk-margin-right">
@@ -64,11 +64,13 @@
                                 </ul>
                             </div>
 
-                            <div class="uk-navbar-item uk-navbar-left uk-logo uk-link-reset">
-                                <a href="/gd/" class="fw-500 warm">
-                                    <img src="img/headshot.webp" alt="" class="uk-border-circle uk-box-shadow-medium uk-float-left uk-margin-small-right" style="max-height:38px;border:3px solid #fff" /> 
-                                    <span class="margin-small-right uk-width-auto">Brian French</span>&ensp;
-                                </a>
+                            <div class="uk-navbar-left">
+                                <div class=" uk-navbar-item uk-link-reset">
+                                    <a href="/gd/" class="uk-logo warm uk-flex uk-flex-middle">
+                                        <img src="img/headshot.webp" alt="" /> 
+                                        <span>Brian French</span>&ensp;
+                                    </a>
+                                </div>
                             </div>
 
                             <div class="uk-navbar-item uk-navbar-center uk-visible@m">
