Mobile Nav Updates

--- a/5winsights.html
+++ b/5winsights.html
@@ -21,26 +21,23 @@
                     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
                                     })(window,document,'script','dataLayer','GTM-WJNPDXXB');</script>
         <!-- End Google Tag Manager -->
-
-
     </head>
 
     <body>
         <!-- Google Tag Manager (noscript) -->
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJNPDXXB"
-                          height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJNPDXXB" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
 
         <!-- Header start -->
         <header>
             <div class="uk-background-muted ">
                 <div uk-sticky="show-on-up: true">
-                    <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small uk-padding-xsmall uk-padding-remove-vertical" uk-dropnav="align:center">
+                    <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small" uk-dropnav="align:center">
                         <div class="uk-container uk-container-xlarge" uk-navbar>
                             <!-- mobile nav -->
-                            <div class="uk-navbar-item uk-navbar-left uk-hidden@m uk-margin-right">
+                            <div class="uk-navbar-item uk-navbar-left uk-hidden@m uk-margin-small-right">
                                 <ul class="uk-navbar-nav">
-                                    <li>
+                                    <li class="uk-padding-xsmall uk-padding-remove-vertical">
                                         <a class="uk-navbar-toggle uk-navbar-toggle-animate" href uk-navbar-toggle-icon></a>
                                         <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding" uk-drop="stretch: y; animation:reveal-top; animate-out:true">
                                             <ul class="uk-nav uk-list uk-list-large uk-nav-default fs-16">
