--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         <header>
             <div class="uk-background-muted">
                 <div uk-sticky="show-on-up: true">
-                    <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small " uk-dropnav="align:center">
+                    <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small" uk-dropnav="align:center">
                         <div class="uk-container uk-container-xlarge" uk-navbar>
                             <!-- mobile nav -->
-                            <div class="uk-navbar-item uk-navbar-left uk-hidden@m uk-margin-right">
+                            <div class="uk-navbar-item uk-navbar-left uk-hidden@m uk-margin-small-right">
                                 <ul class="uk-navbar-nav">
-                                    <li>
+                                    <li class="uk-padding-xsmall uk-padding-remove-vertical">
                                         <a class="uk-navbar-toggle uk-navbar-toggle-animate" href uk-navbar-toggle-icon></a>
                                         <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding" uk-drop="stretch: y; animation:reveal-top; animate-out:true">
                                             <ul class="uk-nav uk-list uk-list-large uk-nav-default fs-16">
