Rounded border updates

--- a/5winsights.html
+++ b/5winsights.html
@@ -203,11 +203,11 @@
                                 <div id="backdrop" class="uk-switcher uk-flex uk-flex-first uk-text-center">
 
                                     <div id="backdrop-1" class="">
-                                        <img src="img/5winsights/5W_10x10-BOOTH_2024.webp" class="uk-box-shadow-small uk-border-rounded"  />
+                                        <img src="img/5winsights/5W_10x10-BOOTH_2024.webp" class="uk-box-shadow-small uk-border-rounded-medium"  />
                                     </div>
 
                                     <div id="backdrop-2" class="">
-                                        <img src="img/5winsights/5W_10x10-BOOTH_2023.webp" class="uk-box-shadow-small uk-border-rounded" />
+                                        <img src="img/5winsights/5W_10x10-BOOTH_2023.webp" class="uk-box-shadow-small uk-border-rounded-medium" />
 
                                     </div>
                                 </div>
@@ -271,11 +271,11 @@
                                     <div class="uk-width-4-5@l uk-flex-first uk-flex-last@l uk-text-center">
                                         <div id="podium" class="uk-switcher">
                                             <div class="">
-                                                <img src="img/5winsights/5W_podium_2024.webp" class="uk-border-rounded" />
+                                                <img src="img/5winsights/5W_podium_2024.webp" class="uk-box-shadow-small uk-border-rounded-medium" />
 
                                             </div>
                                             <div>
-                                                <img src="img/5winsights/5W_podium_2023.webp" class="uk-box-shadow-small uk-border-rounded" />
+                                                <img src="img/5winsights/5W_podium_2023.webp" class="uk-box-shadow-small uk-border-rounded-medium" />
                                             </div>
                                         </div>
                                     </div>
@@ -301,31 +301,31 @@
 
                                 <div id="bridge-slide-1" class="uk-width-medium uk-width-1-5@l">
                                     <div class="uk-margin-small-right">
-                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides.webp" />
+                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides.webp" class="uk-border-rounded" />
                                     </div>
                                 </div>
 
                                 <div id="bridge-slide-2" class="uk-width-medium uk-width-1-5@l">
                                     <div class="uk-margin-small-right">
-                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides2.webp"  />
+                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides2.webp" class="uk-border-rounded"  />
                                     </div>
                                 </div>
 
                                 <div id="bridge-slide-3" class="uk-width-medium uk-width-1-5@l">
                                     <div class="uk-margin-small-right">
-                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides3.webp" />
+                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides3.webp" class="uk-border-rounded" />
                                     </div>
                                 </div>
 
                                 <div id="bridge-slide-4" class="uk-width-medium uk-width-1-5@l">
                                     <div class="uk-margin-small-right">
-                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides4.webp" />
+                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides4.webp" class="uk-border-rounded" />
                                     </div>
                                 </div>
 
                                 <div id="bridge-slide-5" class="uk-width-medium uk-width-1-5@l">
                                     <div class="uk-margin-small-right">
-                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides5.webp" />
+                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides5.webp" class="uk-border-rounded" />
                                     </div>
                                 </div>
 
@@ -341,7 +341,7 @@
                     <div class="uk-width-2-3@s uk-width-1-2@m">
                         <div class="uk-background-muted  uk-padding-small uk-border-rounded-large" id="li-post">
                             <div>
-                                <img src="img/5winsights/li/5W_VFRI-speaker_LinkedIn.webp" />
+                                <img src="img/5winsights/li/5W_VFRI-speaker_LinkedIn.webp" class="uk-border-rounded-medium" />
                             </div>
                             <h4 class="fs-20 fw-600 uk-margin-small-bottom uk-margin-top">Post graphic</h4>
                             <p class="fs-14 uk-margin-small-top">I designed promotional graphic to announce a speaking session by 5W's CEO at a major industry conference. The key challenge was creating a co-branded visual that harmoniously featured both the 5W Insights and the conference logo. I leveraged elements from 5W's recent brand refresh to create a dynamic layout, establishing a clear visual hierarchy that drove attention to the session details while maintaining brand consistency for both entities.</p>
